# flynn-the-running-fox

./: .gitignore  Cargo.toml  README.md  flynn-157da49e6d1695f1.js  flynn-39537576e07f773.js  flynn-52df33192dcd43a.js  flynn-89a2442d59c0103f.js  flynn-9125d56de0f074bb.js  flynn-91cad4bf2dc07136.js  flynn-a6a4d4c078f0459.js  flynn-f0a3f5ac8f45ab22.js  index.html
.github/workflows/: ci.yaml  deploy-page.yaml
src/: main.rs  physics.rs  world.rs
src/audio/: mod.rs
src/player/: controller.rs  mod.rs  movement.rs  sprites.rs
src/world/: mod.rs  wind.rs
web-build/: styles.css
