[package]
name = "flynn"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets"]

[dependencies]
bevy = "0.13.0"
bevy-inspector-egui = "0.23.4"
rand = "0.8.5"
bevy_particle_systems = "0.12.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true