[package]
name = "flynn"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets"]

[dependencies]
bevy = {version = "0.14", features = ['mp3']}
bevy_embedded_assets = "0.11.0"
# bevy-inspector-egui = "0.23.4"
rand = "0.8.5"
bevy_particle_systems = "0.13.0"
uuid = { version = "1.3.0", features = ["v4", "rng-getrandom"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true